# rimlab-agritech-manip

./: LICENSE  README.md
agritech_manip/: CMakeLists.txt  Istruzioni.txt  package.xml
agritech_manip/include/agritech_manip/: robot_dispatcher.h  static_object_tracker.h  tomato_pick_node.h  transform.h
agritech_manip/launch/: all_system.launch.py  all_system_husky.launch.py  camera_only.launch.py  low_my_realsense.launch.xml  my_realsense.launch.xml  realsense2_d405_before_update_20240629.launch.py  tomato_pick_alone.launch.py  tomato_pick_husky.launch.py
agritech_manip/scene_geometry/: husky_manip_mobile.scene
agritech_manip/src/: robot_dispatcher.cpp  static_object_tracker.cpp  test_static_object_tracker.cpp  tomato_pick.cpp  tomato_pick_node.cpp  transform.cpp
